objects/smagicinteract__Incoming_SMS__c.object
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <fields>
        <fullName>attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>incoming_smss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Conversation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversation</label>
        <referenceTo>smagicinteract__Conversation__c</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App Action</label>
        <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App Task</label>
        <referenceTo>smagicinteract__Converse_App_Task__c</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App</label>
        <referenceTo>smagicinteract__Converse_App__c</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Favourite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Inbound_Number__c</fullName>
        <description>You can receive incoming sms to this number.</description>
        <label>Inbound Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                    <default>true</default>
                    <label>SMS</label>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__MMS_Url__c</fullName>
        <label>MMS Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Mobile_Number_without_ISD_Code__c</fullName>
        <description>This fields contains the mobile number sending message without ISD code.</description>
        <label>Mobile Number without ISD Code</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__New__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ObjectType__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Quick_Reply_URL__c</fullName>
        <label>Quick Reply URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Text__c</fullName>
        <label>SMS Text</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incoming_SMS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__actionTaken__c</fullName>
        <label>actionTaken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__external_field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>external field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__outgoing_sms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outgoing SMS</label>
        <referenceTo>smagicinteract__smsMagic__c</referenceTo>
        <relationshipLabel>Incoming SMS</relationshipLabel>
        <relationshipName>Incoming_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__taskId__c</fullName>
        <label>taskId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Incoming SMS</label>
    <listViews>
        <fullName>Nolan_Daigle_Incoming_SMS</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Inbound_Number__c</columns>
        <columns>smagicinteract__Mobile_Number__c</columns>
        <columns>smagicinteract__Lead__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__SMS_Text__c</columns>
        <columns>smagicinteract__actionTaken__c</columns>
        <columns>smagicinteract__external_field__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Incoming SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incoming SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>